Adding OpenApi specifications
